fix: page heading too big

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -10,7 +10,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 40px;
+  padding: 30px;
   width: 40%;
   color: white;
   font-size: 1.2em;
@@ -59,7 +59,7 @@
 
 @media (max-width: 640px) {
   .pageHeading {
-    font-size: 3em;
+    font-size: 2.7em;
   }
   .descriptionContainer {
     font-size: 0.9em;
@@ -68,7 +68,7 @@
 
 @media screen and (max-height: 768px) {
   .pageHeading {
-    padding-top: 0.8em;
+    padding-top: 0.5em;
     font-size: 3.6em;
   }
   .descriptionTitle {
